--- a/src/mail/templates/notify-account.hbs
+++ b/src/mail/templates/notify-account.hbs
@@ -7,9 +7,9 @@
 </head>
 <body>
     <div class="container">
-        <h3>Thông báo mật khẩu từ hệ thống Beta Cinemas</h3>
-        <p>Chào mừng bạn đã trở thành thành viên của Beta Cinemas.</p>
-        <p>Chúng tôi đã tạo cho bạn một tài khoản để bạn có thể đăng nhập. Bạn có thể sử dụng tài khoản này để đăng nhập vào những phiên làm việc tiếp theo. </p>
+        <h3>Thông báo mật khẩu từ hệ thống Assistant AI</h3>
+        <p>Chào mừng bạn đã trở thành thành viên của Assistant AI.</p>
+        <p>Chúng tôi đã tạo cho bạn một tài khoản để bạn có thể đăng nhập. Bạn có thể sử dụng tài khoản này để đăng nhập vào những phiên làm việc tiếp theo.</p>
         <p>Tài khoản:</p>
         <div>Tên đăng nhập: {{email}}</div>
         <div>Mật khẩu: {{password}}</div>
