--- a/src/mail/templates/verify-user.hbs
+++ b/src/mail/templates/verify-user.hbs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <h3>Chào mừng bạn đã đến với Beta Cinemas.</h3>
+        <h3>Chào mừng bạn đã đến với Assistant AI.</h3>
         <p>Vui lòng click vào đường link dưới để xác minh email của bạn.</p>
         <p>Đường link xác thực sẽ có hiệu lực trong 01 ngày kể từ lúc nhận được email này.</p>
         <p>Link xác minh:</p>
