Change google env

--- a/src/mail/templates/notify-account.hbs
+++ b/src/mail/templates/notify-account.hbs
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div class="container">
-        <h3>Thông báo mật khẩu từ hệ thống Assistant AI</h3>
-        <p>Chào mừng bạn đã trở thành thành viên của Assistant AI.</p>
+        <h3>Thông báo mật khẩu từ hệ thống AI Assistant</h3>
+        <p>Chào mừng bạn đã trở thành thành viên của AI Assistant.</p>
         <p>Chúng tôi đã tạo cho bạn một tài khoản để bạn có thể đăng nhập. Bạn có thể sử dụng tài khoản này để đăng nhập vào những phiên làm việc tiếp theo.</p>
         <p>Tài khoản:</p>
         <div>Tên đăng nhập: {{email}}</div>
