--- a/src/mail/templates/forget-password.hbs
+++ b/src/mail/templates/forget-password.hbs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đổi mật khẩu từ hệ thống Assistant AI</title>
+    <title>Đổi mật khẩu từ hệ thống AI Assistant</title>
 </head>
 <body>
     <div>Vui lòng click vào đường link dưới để đổi mật khẩu.</div>
